Update CODEOWNERS to use team

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-# gardener-extension-shoot-lakom-service maintainers
-*   vladimir.nachev@sap.com
+# lakom maintainers
+*   @gardener/lakom-maintainers
