--- a/charts/gardener-extension-shoot-lakom-service/templates/service.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/service.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     networking.resources.gardener.cloud/from-world-to-ports: '[{"protocol":"TCP","port":{{ .Values.controllers.serverPort }}}]'
     networking.resources.gardener.cloud/from-all-seed-scrape-targets-allowed-ports: '[{"port":{{ .Values.controllers.metricsPort }},"protocol":"TCP"}]'
-    # TODO: This label approach is deprecated and no longer needed in the future. Remove them as soon as gardener/gardener@v1.75 has been released.
+    # TODO: This annotation approach is deprecated and no longer needed in the future. Remove them as soon as gardener/gardener@v1.75 has been released.
     networking.resources.gardener.cloud/from-policy-pod-label-selector: all-seed-scrape-targets
     networking.resources.gardener.cloud/from-policy-allowed-ports: '[{"port":{{ .Values.controllers.metricsPort }},"protocol":"TCP"}]'
   labels:
