--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -58,3 +58,7 @@ vpa:
       memory: 64Mi
   updatePolicy:
     updateMode: "Auto"
+additionalAnnotations:
+  service: {}
+additionalLabels:
+  deployment: {}
