--- a/charts/gardener-extension-shoot-lakom-service/templates/service.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/service.yaml
@@ -9,7 +9,6 @@ metadata:
   name: gardener-extension-{{ .Values.serviceName }}-seed
   namespace: {{ .Release.Namespace }}
   annotations:
-    networking.resources.gardener.cloud/from-world-to-ports: '[{"protocol":"TCP","port":{{ .Values.controllers.serverPort }}}]'
     networking.resources.gardener.cloud/from-all-seed-scrape-targets-allowed-ports: '[{"port":{{ .Values.controllers.metricsPort }},"protocol":"TCP"}]'
     networking.resources.gardener.cloud/namespace-selectors: '[{"matchLabels":{"kubernetes.io/metadata.name":"garden"}}]'
     networking.resources.gardener.cloud/pod-label-selector-namespace-alias: extensions
@@ -21,7 +20,4 @@ spec:
   selector:
     app.kubernetes.io/name: gardener-extension-{{ .Values.serviceName }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-  ports:
-  - port: 443
-    protocol: TCP
-    targetPort: {{ .Values.controllers.serverPort }}
+  ports: []
