Expose owner namespace in configuraiton file, do not reuse leader election ns

--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -11,6 +11,8 @@ cosignPublicKeys:
   hjZVcW2ygAvImCAULGph2fqGkNUszl7ycJH/Dntw4wMLSbstUZomqPuIVQ==
   -----END PUBLIC KEY-----
 failurePolicy: Fail
+seedBootstrap:
+  ownerNamespace: garden
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
