--- a/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
@@ -15,6 +15,8 @@ data:
     cosignPublicKeys:
 {{ toYaml .Values.controllers.cosignPublicKeys | indent 6 }}
     failurePolicy: {{ .Values.controllers.failurePolicy }}
+    seedBootstrap:
+      ownerNamespace: {{ .Release.Namespace }}
     debugConfig:
       enableProfiling: {{ .Values.controllers.debugConfig.enableProfiling | default false }}
       enableContentionProfiling: {{ .Values.controllers.debugConfig.enableContentionProfiling | default false }}
