Remove usage of policy/v1beta1 API

--- a/charts/gardener-extension-shoot-lakom-service/templates/poddisruptionbudget.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/poddisruptionbudget.yaml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-apiVersion: {{ include "poddisruptionbudgetversion" .}}
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: gardener-extension-{{ .Values.serviceName }}
