Change the default seedBootstrap.ownerNamespace to 'lakom-extension' in example config

--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -12,7 +12,7 @@ cosignPublicKeys:
   -----END PUBLIC KEY-----
 failurePolicy: Fail
 seedBootstrap:
-  ownerNamespace: garden
+  ownerNamespace: lakom-extension
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
