Bootstrap seed with standalone installation of lakom admission controller (#19)
* Add reconciler bootstrapping the seed

* Remove in-controller webhook and webhook reconciler

* Register the seed bootstrap controller in the manager

* Add seedBootstrap options to the controller manager

* Move MR in ownerNamespace and do not set ownerRef

* Remove unused func arg

* Regenerate code

* Fix network policy service annotations

* Delete the unneeded webhook secrets from the extension namespace

* Run make revendor

* Rename seed resources

* Configure extension controller service

* Remove monitoring configmap

* Add start and end of namespace reconciliaiton

* Re-add health and readiness checkers

* Remove seed k8s version from reconciler

With https://github.com/gardener/gardener/pull/8087 clusters with k8s
version <= 1.21 are not supported, hence there is no need different API
versions for PDBs to be used.

* Read kube-system namespace on reconciliaiton

* Expose owner namespace in configuraiton file, do not reuse leader election ns

* Set ownerReference to the secrets in kube-system namespace

* Set explicitly validity of the ca and server certificates

* Explicitly request the CABundle secret from secretsmanager

* Change the default seedBootstrap.ownerNamespace to 'lakom-extension' in example config

* Fix finding of the linter

* Address review comments

* Configure certificate signing, rotation and retention

--- a/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
@@ -16,7 +16,7 @@ metadata:
     app.kubernetes.io/name: gardener-extension-{{ .Values.serviceName }}
     helm.sh/chart: gardener-extension-{{ .Values.serviceName }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    high-availability-config.resources.gardener.cloud/type: server
+    high-availability-config.resources.gardener.cloud/type: controller
 spec:
   revisionHistoryLimit: 5
   replicas: {{ .Values.replicaCount }}
@@ -78,10 +78,12 @@ spec:
         - --leader-election-id={{ include "leaderelectionid" . }}
         - --heartbeat-namespace={{ .Release.Namespace }}
         - --heartbeat-renew-interval-seconds={{ .Values.controllers.heartbeat.renewIntervalSeconds }}
-        - --webhook-config-cert-dir=/tmp/gardener-extension-{{ .Values.serviceName }}/certs
-        - --webhook-config-server-port={{ .Values.controllers.serverPort }}
         - --health-bind-address=:{{ .Values.controllers.healthPort }}
         - --metrics-bind-address=:{{ .Values.controllers.metricsPort }}
+        ports:
+        - containerPort: {{ .Values.controllers.metricsPort }}
+          name: metrics
+          protocol: TCP
         livenessProbe:
           httpGet:
             path: /healthz
