--- a/example/controller-registration.yaml
+++ b/example/controller-registration.yaml
@@ -14,6 +14,8 @@ apiVersion: core.gardener.cloud/v1beta1
 kind: ControllerRegistration
 metadata:
   name: shoot-lakom-service
+  annotations:
+    security.gardener.cloud/pod-security-enforce: baseline
 spec:
   deployment:
     deploymentRefs:
