Add support for the use-only-image-pull-secrets lakom flag in extension controller

--- a/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
@@ -17,6 +17,7 @@ data:
     failurePolicy: {{ .Values.controllers.failurePolicy }}
     seedBootstrap:
       ownerNamespace: {{ .Release.Namespace }}
+    useOnlyImagePullSecrets: {{ .Values.useOnlyImagePullSecrets }}
     debugConfig:
       enableProfiling: {{ .Values.controllers.debugConfig.enableProfiling | default false }}
       enableContentionProfiling: {{ .Values.controllers.debugConfig.enableContentionProfiling | default false }}
