--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -13,6 +13,7 @@ cosignPublicKeys:
 failurePolicy: Fail
 seedBootstrap:
   ownerNamespace: lakom-extension
+useOnlyImagePullSecrets: true
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
