--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -49,6 +49,7 @@ controllers:
   failurePolicy: Fail
   healthPort: 8080
   metricsPort: 8081
+  useOnlyImagePullSecrets: false
   debugConfig:
     enableProfiling: false
     enableContentionProfiling: false
