Fix extension controller chart to read correctly controllers.useOnlyImagePullSecrets

--- a/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/configmap-extension-config.yaml
@@ -17,7 +17,7 @@ data:
     failurePolicy: {{ .Values.controllers.failurePolicy }}
     seedBootstrap:
       ownerNamespace: {{ .Release.Namespace }}
-    useOnlyImagePullSecrets: {{ .Values.useOnlyImagePullSecrets }}
+    useOnlyImagePullSecrets: {{ .Values.controllers.useOnlyImagePullSecrets }}
     debugConfig:
       enableProfiling: {{ .Values.controllers.debugConfig.enableProfiling | default false }}
       enableContentionProfiling: {{ .Values.controllers.debugConfig.enableContentionProfiling | default false }}
