Update github.com/gardener/gardener to v1.88.0

--- a/.test-defs/lifecycle.yaml
+++ b/.test-defs/lifecycle.yaml
@@ -14,7 +14,7 @@
 #   command: [bash, -c]
 #   args:
 #   - >-
-#     go test -timeout=25m -mod=vendor ./test/system/lifecycle
+#     go test -timeout=25m ./test/system/lifecycle
 #     --v -ginkgo.v -ginkgo.progress -ginkgo.noColor
 #     --shoot-name=$SHOOT_NAME
 #     --project-namespace=$PROJECT_NAMESPACE
