Lakom can allow untrusted images
New flag `--insecure-allow-untrusted-images` allows lakom to run in
detective mode, it will not disallow unsigned images, it will just
return warnings.

--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -31,6 +31,7 @@ cosign:
   #   abcd
   #   -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
+allowUntrustedImages: false
 kubeconfig: {}
 admissionConfig:
   objectSelector: {}
