--- a/charts/lakom/templates/deployment.yaml
+++ b/charts/lakom/templates/deployment.yaml
@@ -82,6 +82,7 @@ spec:
         - --kubeconfig=/etc/lakom/client/kubeconfig
         {{- end }}
         - --use-only-image-pull-secrets={{ .Values.useOnlyImagePullSecrets }}
+        - --insecure-allow-untrusted-images={{ .Values.allowUntrustedImages }}
         {{- if .Values.resources }}
         resources:
 {{ toYaml .Values.resources | trim | indent 10 }}
