--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -50,6 +50,7 @@ controllers:
   healthPort: 8080
   metricsPort: 8081
   useOnlyImagePullSecrets: false
+  allowUntrustedImages: false
   debugConfig:
     enableProfiling: false
     enableContentionProfiling: false
