--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -14,6 +14,7 @@ failurePolicy: Fail
 seedBootstrap:
   ownerNamespace: lakom-extension
 useOnlyImagePullSecrets: true
+allowUntrustedImages: false
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
