Lakom uses warning instead of failure policy `Ignore` (#74)
* Lakom can allow untrusted images

New flag `--insecure-allow-untrusted-images` allows lakom to run in
detective mode, it will not disallow unsigned images, it will just
return warnings.

* Add support for the new lakom flag in the extension controller

Extension controller config is extended with `allowUntrustedImages`
field which is set as value of the flag `insecure-allow-untrusted-images`.

* Lakom chart always use failurePolicy=Fail

* Drop usage of custom admission handler

Now when failure policy is always Fail, there is no need of custom
admission handler to set the HTTP status code to be the same as the
admission review status code.

* Extension controller now always use failure policy Fail

It is no longer possible to control the failure policy of the
admission webhook configurations. If unsigned images must be allowed,
`allowUntrustedImages=true` can be used.

* Extend tests to cover enabled/disabled untrusted images

* Run make format

* Address review feedback

Co-authored-by: Dimitar Mirchev <dimitar.mirchev@sap.com>

---------

Co-authored-by: Dimitar Mirchev <dimitar.mirchev@sap.com>

--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -46,10 +46,10 @@ controllers:
     #   -----BEGIN PUBLIC KEY-----
     #   abcd
     #   -----END PUBLIC KEY-----
-  failurePolicy: Fail
   healthPort: 8080
   metricsPort: 8081
   useOnlyImagePullSecrets: false
+  allowUntrustedImages: false
   debugConfig:
     enableProfiling: false
     enableContentionProfiling: false
