--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -31,6 +31,7 @@ cosign:
   #   abcd
   #   -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
+allowUntrustedImages: false
 kubeconfig: {}
 admissionConfig:
   objectSelector: {}
@@ -41,7 +42,6 @@ admissionConfig:
       values:
       - "kube-system"
       - "lakom-system"
-  failurePolicy: Fail
   clientConfig:
     caBundle: foo
     urlHostname: ""
