Fix label value in podAntiAffinity
Co-authored-by: Dimitar Mirchev <dimitar.mirchev@sap.com>

--- a/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
                 - key: app.kubernetes.io/name
                   operator: In
                   values:
-                  - {{ .Values.name }}
+                  - gardener-extension-{{ .Values.serviceName }}
                 - key: app.kubernetes.io/instance
                   operator: In
                   values:
