Change extension controller pod anti affinity to preferred (#84)
* Change extension controller pod anti affinity to preferred

* Fix label value in podAntiAffinity

Co-authored-by: Dimitar Mirchev <dimitar.mirchev@sap.com>

---------

Co-authored-by: Dimitar Mirchev <dimitar.mirchev@sap.com>

--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -6,4 +6,6 @@
 images:
 - name: lakom
   sourceRepository: github.com/gardener/gardener-extension-shoot-lakom-service
-  repository: europe-docker.pkg.dev/gardener-project/releases/gardener/extensions/lakom
+  repository: europe-docker.pkg.dev/gardener-project/snapshots/gardener/extensions/lakom
+  tag: v0.13.0-dev-7304248b35e6704cfe14b8debdbd54fb839b492e
+
