--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -13,7 +13,7 @@ cosignPublicKeys:
 seedBootstrap:
   ownerNamespace: lakom-extension
 useOnlyImagePullSecrets: true
-allowUntrustedImages: false
+allowUntrustedImages: true
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
