Build and deploy the apps in the right order, patch imaveVectorOverwrite
A post-build skaffold hook is used for patching the imageVectorOverwrite
field of the controllerddeployment.

This way, the lakom admission controller is first built and its name is
patched in using a skaffold hook + kustomize.

--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -31,7 +31,7 @@ cosign:
   #   abcd
   #   -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
-allowUntrustedImages: false
+allowUntrustedImages: true
 kubeconfig: {}
 admissionConfig:
   objectSelector: {}
