--- a/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/templates/deployment.yaml
@@ -69,10 +69,8 @@ spec:
           type: RuntimeDefault
       containers:
       - name: gardener-extension-{{ .Values.serviceName }}
-        image: {{ include "image" . }}
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        command:
-        - /gardener-extension-shoot-lakom-service
+        image: {{ .Values.image }}
+        args:
         - --config=/etc/lakom-service/config.yaml
         - --lifecycle-max-concurrent-reconciles={{ .Values.controllers.lifecycle.concurrentSyncs }}
         - --healthcheck-max-concurrent-reconciles={{ .Values.controllers.healthcheck.concurrentSyncs }}
