--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,6 +6,11 @@ metadata:
 build:
   artifacts:
     - image: local-skaffold/gardener-extension-shoot-lakom-service
+      # The extension controller uses the vectorImageOverwrite values to use 
+      # as the image for the resources it deploys.
+      # This requires that the admission controller is built before this image.
+      requires:
+      - image: local-skaffold/lakom
       ko:
         # The dependencies section configures what files Skaffold should watch for changes when in dev mode.
         dependencies:
@@ -28,25 +33,26 @@ build:
         ldflags:
           - '{{.LD_FLAGS}}'
         main: ./cmd/gardener-extension-shoot-lakom-service
-resourceSelector:
-  allow:
-    # instruct skaffold to inject the built image reference into the image field in our ControllerDeployment
-    - groupKind: ControllerDeployment.core.gardener.cloud
-      image: [".*"]
-manifests:
-  kustomize:
-    paths:
-      - local-setup
-deploy:
-  kubectl: {}
----
-apiVersion: skaffold/v4beta3
-kind: Config
-metadata:
-  name: admission
-build:
-  artifacts:
-    - image: local-skaffold/gardener-extension-shoot-lakom-service
+    - image: local-skaffold/lakom
+      # We need the image for the lakom admisison controller to be injected 
+      # into the vectorImageOverwrite for the controller registration.
+      # Skaffold currently does not give us an easy way to access the 
+      # image name of the newly built lakom during deployment (eg. passing it
+      # to kustomize).
+      #
+      # Hooks(https://skaffold.dev/docs/lifecycle-hooks/), however, provide us
+      # environment variables that contain the needed values:
+      # - SKAFFOLD_IMAGE_REPO
+      # - SKAFFOLD_IMAGE_TAG
+      #
+      # For this reason, using a post-build hook we can inject the image name and
+      # image tag into a patch file for kustomize, which will be triggered during
+      # the deployment phase of skaffold.
+      #
+      # The script file simply creates the needed resource patch for kustomize.
+      hooks:
+        after:
+          - command: [ "sh", "hack/skaffold-imagevector.sh" ]
       ko:
         dependencies:
           paths:
@@ -61,21 +67,14 @@ build:
         ldflags:
           - '{{.LD_FLAGS}}'
         main: ./cmd/lakom
+resourceSelector:
+  allow:
+    # instruct skaffold to inject the built image reference into the image field in our ControllerDeployment
+    - groupKind: ControllerDeployment.core.gardener.cloud
+      image: [".*"]
+manifests:
+  kustomize:
+    paths:
+      - local-setup
 deploy:
-  helm:
-    releases:
-      - name: gardener-extension-shoot-lakom-service
-        namespace: garden
-        wait: true
-        # TODO: Figure out wheter this is the right path
-        chartPath: charts/lakom
-        setValueTemplates:
-          global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_service_admission}}'
-          global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_service_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_lakom_service_admission}}'
-profiles:
-  - name: remote-extensions
-    patches:
-      - op: add
-        path: /deploy/helm/releases/0/setValues
-        value:
-          global.vpa.enabled: false
+  kubectl: {}
