Add the imagevector-overwrite patch to the example/kustomization.yaml file

--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 
 resources:
 - controller-registration.yaml
+
+patches:
+- path: lakom/skaffold/patch-imagevector-overwrite.yaml
