--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -31,7 +31,7 @@ cosign:
   #   abcd
   #   -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
-allowUntrustedImages: true
+allowUntrustedImages: false
 kubeconfig: {}
 admissionConfig:
   objectSelector: {}
