--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2022 SAP SE or an SAP affiliate company and Gardener contributors
+#
+# SPDX-License-Identifier: Apache-2.0
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
