--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,8 @@ kind: Config
 metadata:
   name: extension
 build:
+  insecureRegistries:
+    - garden.local.gardener.cloud
   artifacts:
     - image: local-skaffold/gardener-extension-shoot-lakom-service
       # The extension controller uses the vectorImageOverwrite values to use 
