--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -32,6 +32,7 @@ cosign:
   #   -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
 allowUntrustedImages: false
+allowInsecureRegistries: false
 kubeconfig: {}
 admissionConfig:
   objectSelector: {}
