--- a/example/00-config.yaml
+++ b/example/00-config.yaml
@@ -14,6 +14,7 @@ seedBootstrap:
   ownerNamespace: lakom-extension
 useOnlyImagePullSecrets: true
 allowUntrustedImages: true
+allowInsecureRegistries: true
 debugConfig:
   enableProfiling: false
   enableContentionProfiling: false
