Tag images in skaffold using digest
This way deployments will detect the new image name and restart pods
with the new image version.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,6 +7,8 @@ kind: Config
 metadata:
   name: extension
 build:
+  tagPolicy:
+    inputDigest: {}
   insecureRegistries:
     - garden.local.gardener.cloud
   artifacts:
