Enhance lakom to support public keys with different algorithms
Breaking changes:
- "--cosign-public-key-path" flag is removed
- "--lakom-config-path" is now the flag used to configure lakom
- lakom chart values "cosign.publicKeys" is now struct with key name,
  algorithm and the key itself instead of just list of keys

Features:
- the hash func can be configured via the algorithm when RSA key is used
- RSSSSA-PSS scheme is now supported

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -66,6 +66,7 @@ build:
             - cmd/lakom
             - cmd/lakom/app
             - pkg/constants
+            - pkg/lakom/config
             - pkg/lakom/metrics
             - pkg/lakom/resolvetag
             - pkg/lakom/utils
