--- a/charts/lakom/templates/secret-lakom-config.yaml
+++ b/charts/lakom/templates/secret-lakom-config.yaml
@@ -6,11 +6,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: lakom-cosign-public-keys
+  name: lakom-config
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Values.name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
 type: Opaque
 data:
-  cosign.pub: {{ include "lakom.cosignPublicKeys" . | b64enc }}
+  config.yaml: {{ toYaml .Values.cosign | b64enc }}
