--- a/charts/lakom/values.yaml
+++ b/charts/lakom/values.yaml
@@ -22,14 +22,18 @@ cache:
   refreshInterval: 30s
 cosign:
   publicKeys: []
-  # - |
-  #   -----BEGIN PUBLIC KEY-----
-  #   1234
-  #   -----END PUBLIC KEY-----
-  # - |
-  #   -----BEGIN PUBLIC KEY-----
-  #   abcd
-  #   -----END PUBLIC KEY-----
+  # - name: key1
+  #   algorithm: RSASSA-PKCS1-v1_5-SHA256
+  #   key: |-
+  #     -----BEGIN PUBLIC KEY-----
+  #     1234
+  #     -----END PUBLIC KEY-----
+  # - name: key2
+  #   algorithm: RSASSA-PKCS1-v1_5-SHA256
+  #   key: |-
+  #     -----BEGIN PUBLIC KEY-----
+  #     abcd
+  #     -----END PUBLIC KEY-----
 useOnlyImagePullSecrets: false
 allowUntrustedImages: false
 allowInsecureRegistries: false
