--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -5,10 +5,7 @@
 serviceName: shoot-lakom-service
 replicaCount: 3
 
-image:
-  pullPolicy: IfNotPresent
-  tag: latest
-  repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/shoot-lakom-service
+image: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/shoot-lakom-service
 
 imageVectorOverwrite: {}
   # images:
@@ -50,6 +47,7 @@ controllers:
   metricsPort: 8081
   useOnlyImagePullSecrets: false
   allowUntrustedImages: false
+  allowInsecureRegistries: false
   debugConfig:
     enableProfiling: false
     enableContentionProfiling: false
