--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -5,7 +5,10 @@
 serviceName: shoot-lakom-service
 replicaCount: 3
 
-image: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/shoot-lakom-service
+image:
+  repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/shoot-lakom-service
+  tag: latest
+  pullPolicy: IfNotPresent
 
 imageVectorOverwrite: {}
   # images:
