--- a/local-setup/kustomization.yaml
+++ b/local-setup/kustomization.yaml
@@ -6,3 +6,26 @@ kind: Kustomization
 
 resources:
 - ../example
+
+patches:
+- path: patch-image.yaml
+- path: patch-imagevector-overwrite.yaml
+- patch: |
+    - op: add
+      path: /providerConfig/values/controllers
+      value:
+          allowUntrustedImages: true
+          allowInsecureRegistries: true
+          cosignPublicKeys:
+            publicKeys:
+            - name: example-01
+              algorithm: RSASSA-PKCS1-v1_5-SHA256
+              key: |-
+                -----BEGIN PUBLIC KEY-----
+                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEAKZef+D07q1AyXxf8xw3L23TgDSq
+                Scitl0xDpdLGpODUZXG6LbWY3QXS6yhCt0MZH6+Jf5l/8daO7HDRRvbQMg==
+                -----END PUBLIC KEY-----
+  target:
+    group: core.gardener.cloud
+    kind: ControllerDeployment
+    name: shoot-lakom-service
