--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -19,11 +19,14 @@ patches:
           allowUntrustedImages: true
           allowInsecureRegistries: true
           cosignPublicKeys:
-            - |
-              -----BEGIN PUBLIC KEY-----
-              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEAKZef+D07q1AyXxf8xw3L23TgDSq
-              Scitl0xDpdLGpODUZXG6LbWY3QXS6yhCt0MZH6+Jf5l/8daO7HDRRvbQMg==
-              -----END PUBLIC KEY-----
+            publicKeys:
+            - name: example-01
+              algorithm: RSASSA-PKCS1-v1_5-SHA256
+              key: |-
+                -----BEGIN PUBLIC KEY-----
+                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEAKZef+D07q1AyXxf8xw3L23TgDSq
+                Scitl0xDpdLGpODUZXG6LbWY3QXS6yhCt0MZH6+Jf5l/8daO7HDRRvbQMg==
+                -----END PUBLIC KEY-----
   target:
     group: core.gardener.cloud
     kind: ControllerDeployment
