--- a/charts/lakom/templates/configmap-lakom-config.yaml
+++ b/charts/lakom/templates/configmap-lakom-config.yaml
@@ -4,13 +4,13 @@
 
 ---
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
   name: lakom-config
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Values.name }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-type: Opaque
 data:
-  config.yaml: {{ toYaml .Values.cosign | b64enc }}
+  config.yaml: |
+  {{ toYaml .Values.cosign | nindent 4 }}
