First version of admission controller on shoot spec

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -28,6 +28,8 @@ build:
             - cmd/gardener-extension-shoot-lakom-service/app
             - pkg/apis/config
             - pkg/apis/config/v1alpha1
+            - pkg/apis/lakom
+            - pkg/apis/lakom/v1alpha1
             - pkg/cmd
             - pkg/constants
             - pkg/controller/config
@@ -65,6 +67,8 @@ build:
           paths:
             - cmd/lakom
             - cmd/lakom/app
+            - pkg/apis/lakom
+            - pkg/apis/lakom/v1alpha1
             - pkg/constants
             - pkg/lakom/metrics
             - pkg/lakom/resolvetag
@@ -85,3 +89,34 @@ manifests:
       - local-setup
 deploy:
   kubectl: {}
+---
+apiVersion: skaffold/v4beta3
+kind: Config
+metadata:
+  name: admission
+build:
+  artifacts:
+    - image: local-skaffold/gardener-extension-shoot-lakom-service-admission
+      ko:
+        dependencies:
+          paths:
+            - cmd/gardener-extension-shoot-lakom-service-admission
+            - cmd/gardener-extension-shoot-lakom-service-admission/app
+            - pkg/admission/validator/lakom
+            - pkg/apis/lakom
+            - pkg/apis/lakom/v1alpha1
+            - pkg/constants
+            - VERSION
+        ldflags:
+          - '{{.LD_FLAGS}}'
+        main: ./cmd/gardener-extension-shoot-lakom-service-admission
+deploy:
+  helm:
+    releases:
+      - name: gardener-extension-shoot-lakom-service-extension
+        namespace: garden
+        wait: true
+        chartPath: charts/admission
+        setValueTemplates:
+          global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_service_admission}}'
+          global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_service_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_shoot_lakom_service_admission}}'
