--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -59,3 +59,8 @@ controllers:
   debugConfig:
     enableProfiling: false
     enableContentionProfiling: false
+
+gardener:
+  seed:
+    annotations:
+      service.lakom.extensions.gardener.cloud/deploySeedResources: false
