Use default value "true" for deploying seed resources

--- a/charts/gardener-extension-shoot-lakom-service/values.yaml
+++ b/charts/gardener-extension-shoot-lakom-service/values.yaml
@@ -63,4 +63,4 @@ controllers:
 gardener:
   seed:
     annotations:
-      service.lakom.extensions.gardener.cloud/deploySeedResources: false
+      service.lakom.extensions.gardener.cloud/deploySeedResources: true
