--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/serviceaccount.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/serviceaccount.yaml
@@ -5,3 +5,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "labels" . | indent 4 }}
+automountServiceAccountToken: false
