Apply suggestions from code review
Co-authored-by: Vladimir Nachev <vladimir.nachev@sap.com>

--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/secret-kubeconfig.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gardener-extension-shoot-lakom-admission-kubeconfig
+  name: {{ include "name" . }}-kubeconfig
   namespace: "{{ .Release.Namespace }}"
   labels:
 {{ include "labels" . | indent 4 }}
