--- a/charts/lakom/templates/vpa.yaml
+++ b/charts/lakom/templates/vpa.yaml
@@ -10,13 +10,11 @@ metadata:
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  {{- if .Values.vpa.resourcePolicy }}
   resourcePolicy:
     containerPolicies:
-    - containerName: '*'
-      minAllowed:
-        memory: {{ required ".Values.vpa.resourcePolicy.minAllowed.memory is required" .Values.vpa.resourcePolicy.minAllowed.memory }}
-  {{- end }}
+    - containerName:  {{ .Values.name }}
+      controlledResources:
+      - memory
   targetRef:
     apiVersion: apps/v1
     kind: Deployment
