--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -116,10 +116,10 @@ build:
 deploy:
   helm:
     releases:
-      - name: gardener-extension-shoot-lakom-service-extension
+      - name: gardener-extension-shoot-lakom-admission
         namespace: garden
         wait: true
-        chartPath: charts/admission
+        chartPath: charts/gardener-extension-shoot-lakom-admission
         setValueTemplates:
-          global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_service_admission}}'
-          global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_service_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_shoot_lakom_service_admission}}'
+          global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_admission}}'
+          global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_shoot_lakom_admission}}'
