Scope based verification (#103)
* Add LakomConfif type and register it to scheme

* Determine object + namespace selectors based on scope

* First version of charts for admission controller

* First version of admission controller on shoot spec

* Add shoot validator tests, remove manual managedseed check

* Remove registry cache references

* Add docs for the scope field in the shoot provider config

* Run check + format

* Allow empty provider config

* Fix merge conflict

* Address PR comments

* Apply make format

* Apply update skaffold deps

* Apply suggestions from code review

Co-authored-by: Vladimir Nachev <vladimir.nachev@sap.com>

* Handle err from marshaling json in encode

* Add admission controller to Makefile and Docker targets

* Fix group name for lakom api

* Move providerconfig decoding check before it gets used

* Remove unused key fields in actuator tests

* Update skaffold pipeline to handle new controller deployment version

* Add admission controller to the pipeline definition

* Fix shoot-lakom-admission name in skaffold.yaml

* Fix segmentation fault in lifecycle actuator

---------

Co-authored-by: Vladimir Nachev <vladimir.nachev@sap.com>

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,6 +32,8 @@ build:
             - cmd/gardener-extension-shoot-lakom-service/app
             - pkg/apis/config
             - pkg/apis/config/v1alpha1
+            - pkg/apis/lakom
+            - pkg/apis/lakom/v1alpha1
             - pkg/cmd
             - pkg/constants
             - pkg/controller/config
@@ -90,3 +92,34 @@ manifests:
       - local-setup
 deploy:
   kubectl: {}
+---
+apiVersion: skaffold/v4beta3
+kind: Config
+metadata:
+  name: admission
+build:
+  artifacts:
+    - image: local-skaffold/gardener-extension-shoot-lakom-admission
+      ko:
+        dependencies:
+          paths:
+            - cmd/gardener-extension-shoot-lakom-admission
+            - cmd/gardener-extension-shoot-lakom-admission/app
+            - pkg/admission/validator/lakom
+            - pkg/apis/lakom
+            - pkg/apis/lakom/v1alpha1
+            - pkg/constants
+            - VERSION
+        ldflags:
+          - '{{.LD_FLAGS}}'
+        main: ./cmd/gardener-extension-shoot-lakom-admission
+deploy:
+  helm:
+    releases:
+      - name: gardener-extension-shoot-lakom-admission
+        namespace: garden
+        wait: true
+        chartPath: charts/gardener-extension-shoot-lakom-admission
+        setValueTemplates:
+          global.image.repository: '{{.IMAGE_REPO_local_skaffold_gardener_extension_shoot_lakom_admission}}'
+          global.image.tag: '{{.IMAGE_TAG_local_skaffold_gardener_extension_shoot_lakom_admission}}@{{.IMAGE_DIGEST_local_skaffold_gardener_extension_shoot_lakom_admission}}'
